# new-level

./: .coveragerc  .env  .env-example  .gitignore  Dockerfile  README.md  app-down.bat  app-down.sh  app-up.bat  app-up.sh  compose-prod.yml  compose.yml  docker-compose.yml  pg-compose-prod.yml  pg-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  sqlite-compose-prod.yml  sqlite-compose.yml  tasks.py  test.db
.github/workflows/: test.yml
app/: Dockerfile  auth_utils.py  config.py  database.py  error_handlers.py  game_utils.py  main.py  migrate_database.py  models.py  password_utils.py  schemas.py  security.py  setup_database.py  setup_db.py  templates.py
app/data/: dictionary_example.py
app/routes/: admin.py  auth.py  game.py  index.py  items.py  user.py  users.py
app/services/: item_services.py  users_service.py
app/templates/: about.html  admin.html  game.html  index-log.html  index.html  layout.html  login.html  profile.html  register.html
app/templates/admin/: dictionary.html  edit_word.html  index.html  settings.html  users.html
app/templates/error/: 401.html
app/templates/errors/: 401.html  404.html  500.html  index.html
refactor_examples/: exceptions.py
refactor_examples/repositories/: base_repository.py
refactor_examples/routes/: game_refactored.py
refactor_examples/services/: game_service.py  game_strategies.py
test/: .gitignore  README.md  conftest.py  helpers.py  pytest.ini  run_tests.py
test/integration/: test_admin_routes.py  test_auth_routes.py  test_database_operations.py  test_game_routes.py
test/performance/: test_database_performance.py
test/unit/: test_auth_utils.py  test_config.py  test_game_utils.py  test_models.py  test_password_utils.py
tests/: conftest.py
